kubernetes/manifest/redmine/dyanamic_volume_provisioning/transformer-label.yaml
apiVersion: builtin
kind: LabelTransformer
metadata:
  name: transformer-label
labels:
  app.kubernetes.io/part-of: redmine
  app.kubernetes.io/managed-by: github
  app.kubernetes.io/created-by: controller-manager
fieldSpecs:
- path: metadata/labels
  create: true
- path: spec/selector/matchLabels
  kind: Deployment
  create: true
- path: spec/template/metadata/labels
  kind: Deployment
  create: true
